# lazorkit-cookbook

./: .gitignore  LICENSE  README.md
app/: env.example  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/api/charge-subscriptions/: route.ts
app/app/api/nft-metadata/[mint]/: route.ts
app/app/recipes/01-passkey-wallet-basics/: README.md  page.tsx
app/app/recipes/02-gasless-transfer/: README.md  page.tsx
app/app/recipes/03-subscription-service/: README.md  page.tsx
app/app/recipes/04-gasless-raydium-swap/: README.md  page.tsx
app/app/recipes/05-wallet-adapter-integration/: README.md  layout.tsx  page.tsx
app/app/recipes/06-nft-minting/: README.md  page.tsx
app/app/recipes/07-compressed-nft-minting/: README.md  page.tsx
app/components/: DebugBanner.tsx  Footer.tsx  Header.tsx  Navigation.tsx
app/components/connector/radix-ui/: connect-button.tsx  index.ts  wallet-dropdown-content.tsx  wallet-modal.tsx
app/components/ui/: spinner.tsx
app/hooks/: useBalances.ts  useLazorkitWalletConnect.ts  useTransferForm.ts
app/lib/: constants.ts  debug-helper.ts  nft-utils.ts  solana-utils.ts
app/lib/program/: subscription-service.ts
app/providers/: LazorkitProvider.tsx
app/scripts/: charge-subscriptions.ts  create-merkle-tree.ts
program/subscription-program/: .pnp.cjs  README.md
program/subscription-program/programs/subscription-program/: Cargo.toml
recipes/02-gasless-subscription-service/app/: env.example  package.json  tailwind.config.ts
recipes/02-gasless-subscription-service/app/app/: globals.css.backup  layout.tsx  page.tsx
(+17 files in other folders)
